<resources>
    <string name="app_name">Untact Order</string>
    <string name="at_pwin_guide">Please input table password</string>
    <string name="at_pwin_del_all">Clear</string>
    <string name="at_pwin_del_one">Remove</string>
    <string name="at_pwin_table_hint">Table Number</string>
    <string name="at_pwin_guide_new">Please input new table password</string>
    <string name="at_pwin_guide_confirm">Please confirm your password\nIf you enter it incorrectly 3 times, the registration password will be initialized</string>
    <string name="at_pwin_guide_retry">You entered the wrong password\nPlease enter it again</string>
    <string name="at_pwin_wrong_password_msg">"Different password! Try again! "</string>
    <string name="text_confirm">Confirm</string>
    <string name="text_reject">Reject</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_okay">Okay</string>
    <string name="at_main_guide">Guide</string>
    <string name="at_main_guide_msg">Want to know how to use app? ></string>
    <string name="at_main_detailed_guide_msg">
        \n
        Not Translated\n
    </string>
    <string name="at_main_total_price">Total order price</string>
    <string name="krw">won</string>
    <string name="at_main_make_new_order">Make New Order</string>
    <string name="at_main_make_additional_order">Make Additional Order</string>
    <string name="at_qrsc_guide_msg">Please put the QR code in the scan box!</string>
    <string name="at_qrsc_cancel_msg">QR scanner activity  is canceled.</string>
    <string name="at_qrsc_invalid_msg">Invalid QR code!!!</string>
    <string name="at_categori_item_plus">+</string>
    <string name="at_categori_item_zero">0</string>
    <string name="at_categori_item_minus">-</string>
    <string name="at_option_select_title">Select Menu Option</string>
    <string name="at_option_select_menuname">menuname</string>
    <string name="at_option_select_price">price</string>
    <string name="at_option_select_quantity">quantity</string>
    <string name="at_option_select_done">done</string>
</resources>