<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"

              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"

              android:background="#F1F2F4">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            app:cardElevation="5dp"
    >
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_margin="12dp"
                >
            <TextView

                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/menu_tx_name"
                    android:background="#3A3947"
                    android:gravity="center"
                    android:textColor="#FFFFFF"
                    android:layout_margin="6dp"
                    android:padding="15dp"/>
            <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#3A3947"
                    android:id="@+id/menu_tx_price"
                    android:layout_gravity="bottom"
                    android:textStyle="bold"/>
            <TextView
                    android:text="@string/at_categori_item_minus"
                    android:layout_margin="6dp"
                    android:textColor="#FFFFFF"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/menu_tx_minus"
                    android:background="@drawable/shape_circle_plus_minus"
                    />
            <TextView
                    android:text="@string/at_categori_item_zero"
                    android:layout_margin="6dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textColor="#3A3947"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/menu_tx_quantity"
                    android:textStyle="bold"/>
            <TextView
                    android:text="@string/at_categori_item_plus"
                    android:layout_gravity="center"
                    android:layout_margin="6dp"
                    android:textColor="#FFFFFF"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/menu_tx_plus"
                    android:background="@drawable/shape_circle_plus_minus"
                    />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
