<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_primary_light"
        tools:context=".PasswordInputActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pwin_tv_table_num"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="25sp"
            android:gravity="center"
            android:textColor="@color/at_pwin_num_pad_text"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/ac_pwin_table_name_background"
            android:hint="@string/at_pwin_table_hint"
            app:layout_constraintBottom_toTopOf="@+id/pwin_tv_guide_msg"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>

    <TextView
            android:text="@string/at_pwin_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pwin_tv_guide_msg"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center"
            android:textColor="@color/at_pwin_num_pad_text"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tableLayout"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pwin_tv_guide_msg"
            app:layout_constraintBottom_toTopOf="@+id/tableLayout">

        <TextView
                android:gravity="center"
                android:layout_marginStart="55dp"
                android:layout_marginEnd="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pwin_tv_pw_1st"
                android:layout_weight="1"
                android:background="@drawable/pwin_pw_view_circle"
                android:backgroundTint="@color/at_pwin_pw_view_circle_ordinal"
                />

        <TextView
                android:gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_width="wrap_content"
                android:background="@drawable/pwin_pw_view_circle"
                android:layout_height="wrap_content"
                android:id="@+id/pwin_tv_pw_2nd"
                android:layout_weight="1"
                android:backgroundTint="@color/at_pwin_pw_view_circle_ordinal"/>

        <TextView
                android:gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_width="wrap_content"
                android:background="@drawable/pwin_pw_view_circle"
                android:layout_height="wrap_content"
                android:id="@+id/pwin_tv_pw_3rd"
                android:layout_weight="1"
                android:backgroundTint="@color/at_pwin_pw_view_circle_ordinal"/>

        <TextView
                android:gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_width="wrap_content"
                android:background="@drawable/pwin_pw_view_circle"
                android:layout_height="wrap_content"
                android:id="@+id/pwin_tv_pw_4th"
                android:layout_weight="1"
                android:backgroundTint="@color/at_pwin_pw_view_circle_ordinal"/>

        <TextView
                android:gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_width="wrap_content"
                android:background="@drawable/pwin_pw_view_circle"
                android:layout_height="wrap_content"
                android:id="@+id/pwin_tv_pw_5th"
                android:layout_weight="1"
                android:backgroundTint="@color/at_pwin_pw_view_circle_ordinal"/>

        <TextView
                android:gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="55dp"
                android:background="@drawable/pwin_pw_view_circle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pwin_tv_pw_6th"
                android:layout_weight="1"
                android:backgroundTint="@color/at_pwin_pw_view_circle_ordinal"/>
    </LinearLayout>

    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tableLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="16dp">

            <Button
                    android:text="7"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:textColor="@color/at_pwin_num_pad_text"
                    android:textStyle="bold"
                    android:background="@color/at_pwin_num_pad_background"
                    app:backgroundTint="@color/at_pwin_pw_view_circle_ordinal"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:id="@+id/pwin_bt_num_pad_7"
                    android:onClick="onNumPadClicked"
                    tools:ignore="HardcodedText"/>

            <Button
                    android:text="8"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:textColor="@color/at_pwin_num_pad_text"
                    android:textStyle="bold"
                    app:backgroundTint="@color/at_pwin_pw_view_circle_ordinal"
                    android:background="@color/at_pwin_num_pad_background"
                    android:onClick="onNumPadClicked"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:id="@+id/pwin_bt_num_pad_8"
                    tools:ignore="HardcodedText"/>

            <Button
                    android:text="9"
                    android:id="@+id/pwin_bt_num_pad_9"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:textColor="@color/at_pwin_num_pad_text"
                    android:textStyle="bold"
                    android:layout_width="0dp"
                    android:onClick="onNumPadClicked"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="@color/at_pwin_num_pad_background"
                    tools:ignore="HardcodedText"/>
        </TableRow>

        <TableRow
                android:layout_width="wrap_content"
                android:layout_height="77dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

            <Button
                    android:text="4"
                    android:id="@+id/pwin_bt_num_pad_4"
                    android:textSize="30sp"
                    android:onClick="onNumPadClicked"
                    android:gravity="center"
                    android:textColor="@color/at_pwin_num_pad_text"
                    android:textStyle="bold"
                    app:backgroundTint="@color/at_pwin_pw_view_circle_ordinal"
                    android:background="@color/at_pwin_num_pad_background"

                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    tools:ignore="HardcodedText"/>

            <Button
                    android:text="5"
                    android:id="@+id/pwin_bt_num_pad_5"
                    android:textSize="30sp"
                    android:onClick="onNumPadClicked"
                    android:gravity="center"
                    android:textColor="@color/at_pwin_num_pad_text"
                    android:textStyle="bold"
                    app:backgroundTint="@color/at_pwin_pw_view_circle_ordinal"
                    android:background="@color/at_pwin_num_pad_background"

                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    tools:ignore="HardcodedText"/>

            <Button
                    android:text="6"
                    android:id="@+id/pwin_bt_num_pad_6"
                    android:textSize="30sp"
                    android:onClick="onNumPadClicked"
                    android:gravity="center"
                    android:textColor="@color/at_pwin_num_pad_text"
                    android:textStyle="bold"
                    app:backgroundTint="@color/at_pwin_pw_view_circle_ordinal"
                    android:background="@color/at_pwin_num_pad_background"

                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    tools:ignore="HardcodedText"/>
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

            <Button
                    android:text="1"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:textColor="@color/at_pwin_num_pad_text"
                    android:textStyle="bold"
                    app:backgroundTint="@color/at_pwin_pw_view_circle_ordinal"
                    android:background="@color/at_pwin_num_pad_background"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:id="@+id/pwin_bt_num_pad_1"
                    android:onClick="onNumPadClicked"
                    tools:ignore="HardcodedText"/>

            <Button
                    android:text="2"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:textColor="@color/at_pwin_num_pad_text"
                    android:textStyle="bold"
                    android:onClick="onNumPadClicked"
                    app:backgroundTint="@color/at_pwin_pw_view_circle_ordinal"
                    android:background="@color/at_pwin_num_pad_background"

                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:id="@+id/pwin_bt_num_pad_2"
                    tools:ignore="HardcodedText"/>

            <Button
                    android:text="3"
                    android:onClick="onNumPadClicked"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:textColor="@color/at_pwin_num_pad_text"
                    android:textStyle="bold"
                    app:backgroundTint="@color/at_pwin_pw_view_circle_ordinal"
                    android:background="@color/at_pwin_num_pad_background"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:id="@+id/pwin_bt_num_pad_3"
                    tools:ignore="HardcodedText"/>
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp">

            <Button
                    android:text="@string/at_pwin_del_all"
                    android:textSize="18sp"
                    android:layout_weight="1"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="center"
                    android:textColor="@color/at_pwin_num_pad_text"
                    android:textStyle="bold"
                    app:backgroundTint="@color/magenta"
                    android:layout_width="0sp"
                    android:background="@color/at_pwin_pw_view_circle_ordinal"
                    android:layout_height="match_parent"
                    android:id="@+id/pwin_bt_num_pad_clear_all"
                    android:onClick="onClearAllClicked"/>

            <Button
                    android:text="0"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:textColor="@color/at_pwin_num_pad_text"
                    android:textStyle="bold"
                    app:backgroundTint="@color/at_pwin_pw_view_circle_ordinal"
                    android:background="@color/at_pwin_num_pad_background"
                    android:onClick="onNumPadClicked"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:id="@+id/pwin_bt_num_pad_0"
                    tools:ignore="HardcodedText"/>

            <Button
                    android:text="@string/at_pwin_del_one"
                    android:textSize="18sp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/at_pwin_num_pad_text"
                    android:textStyle="bold"
                    app:backgroundTint="@color/yellow"
                    android:background="@color/at_pwin_pw_view_circle_ordinal"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/pwin_bt_num_pad_clear_one"
                    android:onClick="onClearOneClicked"/>
        </TableRow>
    </TableLayout>

    <Button
            android:text="Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            tools:layout_editor_absoluteY="341dp"
            tools:layout_editor_absoluteX="161dp"
            android:backgroundTintMode="src_over"
            android:backgroundTint="#00BCD4"/>

</androidx.constraintlayout.widget.ConstraintLayout>